@@ -1,5 +1,5 @@
 ThisBuild / organization := "net.ghoula"
-ThisBuild / scalaVersion := "3.8.2"
+ThisBuild / scalaVersion := "3.8.4"
 ThisBuild / versionScheme := Some("early-semver")
 ThisBuild / semanticdbEnabled := true
 ThisBuild / semanticdbVersion := scalafixSemanticdb.revision
@@ -24,20 +24,14 @@ lazy val sharedScalacOptions = Seq(
   "-Yexplicit-nulls"
 )
 
-lazy val testScalacOptions = Seq(
-  "-Wunused:imports"
-)
-
 // Dependencies
-val valarVersion = "0.1.0-SNAPSHOT"
-val saratiVersion = "0.1.0+2-c539575a"
-val rumilVersion = "0.2.0+4-6ac28897"
-val eruVersion = "0.1.0-SNAPSHOT"
-val sparkVersion = "4.1.1"
+val saratiVersion = "0.3.2"
+val rumilVersion = "0.3.5"
+val sparkVersion = "4.2.0"
 
 lazy val root = project
   .in(file("."))
-  .aggregate(core, columnar, spark, bench)
+  .aggregate(core, spark)
   .settings(
     name := "strongbow",
     publish / skip := true
@@ -51,18 +45,9 @@ lazy val core = project
     libraryDependencies ++= Seq(
       "net.ghoula" %% "rumil-parsers" % rumilVersion,
       "net.ghoula" %% "sarati" % saratiVersion,
-      "org.scalatest" %% "scalatest" % "3.2.19" % Test,
-      "org.scalacheck" %% "scalacheck" % "1.18.1" % Test
+      "org.scalatest" %% "scalatest" % "3.2.20" % Test,
+      "org.scalacheck" %% "scalacheck" % "1.20.0" % Test
     )
-  )
-
-lazy val columnar = project
-  .in(file("strongbow-columnar"))
-  .dependsOn(core)
-  .settings(
-    name := "strongbow-columnar",
-    scalacOptions ++= sharedScalacOptions
-    // No extra dependencies—just core
   )
 
 lazy val spark = project
@@ -70,8 +55,11 @@ lazy val spark = project
   .dependsOn(core)
   .settings(
     name := "strongbow-spark",
-    scalacOptions ++= sharedScalacOptions.filterNot(o => o == "-language:strictEquality" || o == "-Wunused:all"),
-    scalacOptions += "-Wunused:imports",
+    scalacOptions ++= sharedScalacOptions.filterNot(_ == "-language:strictEquality"),
+    Test / scalacOptions ~= (_.map {
+      case "-Wunused:all" => "-Wunused:imports"
+      case other => other
+    }),
     javacOptions := Seq("--release", "21"),
     libraryDependencies ++= Seq(
       ("org.apache.spark" %% "spark-sql" % sparkVersion % Provided)
@@ -81,9 +69,11 @@ lazy val spark = project
         .cross(CrossVersion.for3Use2_13)
         .exclude("org.scala-lang.modules", "scala-xml_2.13"),
       "org.scala-lang.modules" %% "scala-xml" % "2.4.0" % Test,
-      "org.scalatest" %% "scalatest" % "3.2.19" % Test
+      "org.scalatest" %% "scalatest" % "3.2.20" % Test
     ),
     Test / fork := true,
+    Test / parallelExecution := false,
+    Test / testOptions += Tests.Argument("-l", "net.ghoula.strongbow.Benchmark"),
     // Scala 3.8's unified scala-library uses TASTY metadata instead of ScalaSig annotations.
     // scala-reflect 2.13 (used by Spark internals) reads ScalaSig to resolve types like
     // Array.apply. Without ScalaSig, it fails: "class Array does not have a member apply".
@@ -92,19 +82,35 @@ lazy val spark = project
     // the annotation format that scala-reflect reads.
     Test / fullClasspath := {
       val cp = (Test / fullClasspath).value
+      val converter = fileConverter.value
       val scalaReflectJar = cp
-        .find(_.data.getName.startsWith("scala-reflect-"))
+        .find(_.data.name.startsWith("scala-reflect-"))
         .getOrElse(
           sys.error("scala-reflect jar not found on test classpath")
         )
       // Derive the 2.13.x version from the scala-reflect jar already on the classpath.
       // Coursier cache: .../org/scala-lang/scala-reflect/<ver>/ → .../org/scala-lang/scala-library/<ver>/
-      val reflectVersion = scalaReflectJar.data.getName.stripPrefix("scala-reflect-").stripSuffix(".jar")
-      val scalaLangDir = scalaReflectJar.data.getParentFile.getParentFile.getParentFile
-      val scalaLib213 = Attributed.blank(
-        scalaLangDir / "scala-library" / reflectVersion / s"scala-library-$reflectVersion.jar"
+      val reflectVersion = scalaReflectJar.data.name.stripPrefix("scala-reflect-").stripSuffix(".jar")
+      val scalaLangDir = converter.toPath(scalaReflectJar.data).getParent.getParent.getParent
+      val scalaLib213 = Attributed.blank[xsbti.HashedVirtualFileRef](
+        converter.toVirtualFile(
+          scalaLangDir.resolve("scala-library").resolve(reflectVersion).resolve(s"scala-library-$reflectVersion.jar")
+        )
       )
       scalaLib213 +: cp
+    },
+    assembly / assemblyJarName := "strongbow-spark-bench.jar",
+    assembly / mainClass := Some("net.ghoula.strongbow.spark.BenchRunner"),
+    assembly / fullClasspath := (Test / fullClasspath).value,
+    assembly / assemblyMergeStrategy := {
+      case PathList("META-INF", "MANIFEST.MF") => MergeStrategy.discard
+      case PathList("META-INF", x, _*) if x.endsWith(".SF") || x.endsWith(".DSA") || x.endsWith(".RSA") =>
+        MergeStrategy.discard
+      case PathList("META-INF", "services", _*) => MergeStrategy.concat
+      case PathList("META-INF", _*) => MergeStrategy.first
+      case "module-info.class" => MergeStrategy.discard
+      case x if x.endsWith(".class") => MergeStrategy.first
+      case _ => MergeStrategy.first
     },
     Test / javaOptions ++= Seq(
       "-Xmx4G",
@@ -127,42 +133,5 @@ lazy val spark = project
     }
   )
 
-// Optional integration modules (commented out until dependencies are published):
-//
-// lazy val validation = project
-//   .in(file("strongbow-validation"))
-//   .dependsOn(core)
-//   .settings(
-//     name := "strongbow-validation",
-//     scalacOptions ++= sharedScalacOptions,
-//     libraryDependencies ++= Seq(
-//       "net.ghoula" %% "valar-core" % valarVersion
-//     )
-//   )
-//
-// lazy val effects = project
-//   .in(file("strongbow-effects"))
-//   .dependsOn(core, columnar)
-//   .settings(
-//     name := "strongbow-effects",
-//     scalacOptions ++= sharedScalacOptions,
-//     libraryDependencies ++= Seq(
-//       "net.ghoula" %% "eru-core" % eruVersion
-//     )
-//   )
-
-lazy val bench = project
-  .in(file("strongbow-bench"))
-  .dependsOn(core, columnar)
-  .settings(
-    name := "strongbow-bench",
-    scalacOptions ++= testScalacOptions,
-    publish / skip := true,
-    fork := true,
-    javaOptions ++= Seq("-Xms8G", "-Xmx48G", "-Xss4M", "-XX:+UseZGC"),
-    // Benchmarks excluded from scalafix - performance code may use vars/unsafe patterns
-    scalafixOnCompile := false
-  )
-
 // Command aliases
-addCommandAlias("prepare", "scalafmtAll; scalafmtSbt; core/scalafixAll; columnar/scalafixAll; Test/compile")
+addCommandAlias("prepare", "scalafmtAll; scalafmtSbt; core/scalafixAll; Test/compile")
